27Dec98========================================================================
1. Various detail changes to remove some more warning with -w on
2. Added DXCron handling - you can do crontabs now.
3. Added show/program command so you can see where it is loading your .pm files
from.
4. Added pc26/27 replies to locally connected cluster's merge (pc25) requests
5. Added spotters DXCC and original cluster to Spot data files.
23Dec98========================================================================
1. Reindented various things
2. Added missing $main::mycall on the end of outgoing PC11s (!)
3. Check that PC16/17 node calls really are nodes (AFAIAC).
22Dec98========================================================================
1. Added brackets round callsign if not here for prompt
2. Added Iain's set/password routine
3. Fixed sh/dx problems (the xemacs indent region messed Spot.pm up!)
4. Issued 1.15
21Dec98============= late! ====================================================
1. fixed problem with missing DXDebug in DXProt.
2. Fixed DXDebug so that it actually works as advertised with and without 
trailing \n. 
3. Added deduping of WWV spots as well (at for date,time,sfi,k and i) dups
4. Replaced the 0 in "02-Dec-1998" with ' ' so it reads " 2-Dec-1998", it seems
hard to credit it but some 'programs' out there that connect to clusters have
problems with the leading '0'!
5. In the same vain, included a strictly AK1A compatible sh/heading, apparently
this is necessary for the same reason as 4.
6. Started contrib tree stored the old show/heading in contrib/g0rdi/show.
7. Because I now correctly dedupe spots and wwv (there's a hostage to fortune..)
I have added a merge command. 
21Dec98========================================================================
1. Added "issue" to the client program for 'login' connections
2. Added more docs for client program.
3. Fixed problem introduced in 1.12 where a connect locally with a callsign of