@@ -18,7 +18,7 @@
 	<p>
 	<!-- Created: Wed Dec  2 18:22:33 GMT 1998 -->
 	<!-- hhmts start -->
-Last modified: Sun Dec 27 20:18:24 GMT 1998
+Last modified: Mon Dec 28 23:13:24 GMT 1998
 <!-- hhmts end -->
 
 	<h4>Introduction</h4>
@@ -68,6 +68,7 @@ Last modified: Sun Dec 27 20:18:24 GMT 1998
 	  <li> <a href="cron.html">Periodic</a> jobs, e.g. starting connection to other clusters.
 	  <li> <a href="hops.html">Hop</a> control, network <a href="hops.html#isolate">isolation</a> etc.
 	  <li> <a href="program.html">Programming</a> new commands or altering existing ones.
+	  <li> <a href="local.html">Local</a> customisation of the cluster daemon.
 	  <li> <a href="../download/">Download</a> the software and any patches.
 	  </ol>
 
