@@ -1,0 +1,62 @@
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<html>
+  <head>
+    <title>Local extensions</title>
+	<meta name="Keywords" content="DX Cluster, DXSpider, Spider, Packet Cluster, DXCluster, Pavillion Software, AK1A, AX25, AX.25, WWV, Packet Radio, Amateur Radio, Propagation, DX, DXing, G1TLH, GB7TLH, Dirk Koopman, Mailing list, Linux, RedHat, PERL">
+	<meta name="Description" content="Software and systems for realtime digital communications between amateur radio stations for the provision of information on propagation conditions and stations operating">
+	<meta name="Author" content="Dirk Koopman G1TLH">
+  </head>
+  <body TEXT="#000000" LINK="#0000ff" VLINK="#800080" BGCOLOR="#FFFFFF">
+	<FONT COLOR="#606060"> 
+	  <hr>
+	  <h2>Local extensions</h2>
+	  <hr>
+	</font>
+	
+	
+	<address><a href="mailto:djk@tobit.co.uk">Dirk Koopman G1TLH</a></address>
+	<p>
+	  <!-- Created: Sun Dec 13 20:25:14 GMT 1998 -->
+	  <!-- hhmts start -->
+Last modified: Mon Dec 28 22:43:23 GMT 1998
+<!-- hhmts end -->
+	<h4>Introduction</h4>
+
+	The DXSpider system is designed to be extensible, to facilitate experimentation and
+	self-training in both Amateur Radio and Programming.
+
+	<p>Having said all of that it is also designed so that it should be relatively easy to solve
+	  some real world problems that we have in the DX Cluster network as well as allow the implementation
+	  and testing of new protocols relatively safely.
+
+	<h4>What is it?</h4>
+
+	The mechanism I have chosen to allow people to do their own thing, is a perl <tt>.pm</tt> file called
+	<b>Local.pm</b>. It is simply a perl package with its own address space, which has a number of defined
+	subroutines called from certain places in the daemon code. I have provided a "blank" version for you 
+	to modify. 
+
+	<h4>Where is it?</h4>
+
+	The template is <b>/spider/perl/Local.pm</b>. This file should be
+	copied into <b>/spider/local</b> and then modified to your taste.
+
+	<p>At the moment, the template's format and standard functions are
+	not really finalised, but I won't take away the functions that are
+	currently there and I won't rename them. I reserve the right to
+	add to them!
+
+    <p>As and when I get a clearer idea of what people might wish to do with
+	  it and how, I will add to the documentation on this page. So for now:
+	  this is it!
+
+<!-- Standard Footer!! -->
+	<p>&nbsp;</p>
+	<p>
+	  <FONT COLOR="#606060"><hr></font>
+	<font color="#FF0000" size=-2>
+	  Copyright &copy; 1998 by Dirk Koopman G1TLH. All Rights Reserved<br>
+	</font>
+	<font color="#000000" size=-2>$Id$</font>
+  </body>
+</html>
