@@ -1,3 +1,8 @@
+28Dec98========================================================================
+1. Crossed fingers, got rid of the instabilities caused by execing programs
+at vast speed (reduced it significantly anyway).
+2. Personals will now move if homenode is known.
+3. Added Local.pm for doing local specials
 27Dec98========================================================================
 1. Various detail changes to remove some more warning with -w on
 2. Added DXCron handling - you can do crontabs now.
